# StringArt

./: README.md  cairo_visualize.py  main.py  mathy.py  pillow_load.py  pyproject.toml
img/: beans2-128.xcf  cats2-128.xcf  face-309.xcf  lola1.xcf  oa-102.xcf  pi4-128.xcf  riley1.xcf  wide1-280.xcf  yuri4-250.xcf  yuri6-250.xcf  yuri7-250.xcf  yuri8-250.xcf
